--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "react-autosuggest": "^10.1.0",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-typeahead": "^6.0.2",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-multi-carousel": "^2.8.2",
     "react-notification-system-redux": "^2.0.1",
+    "react-pro-sidebar": "^1.0.0",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.5",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.1",
@@ -34,6 +37,7 @@
     "sass": "^1.59.3",
     "simple-line-icons": "^2.5.5",
     "socket.io-client": "^4.6.1",
+    "validatorjs": "^3.22.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
