--- a/package.json
+++ b/package.json
@@ -1,57 +1,117 @@
 {
-  "name": "smartdeal_frontend",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.9.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "autosuggest-highlight": "^3.3.4",
-    "axios": "^1.3.4",
-    "bootstrap": "^5.2.3",
-    "connected-react-router": "^6.9.3",
-    "font-awesome": "^4.7.0",
-    "formik": "^2.2.9",
-    "moment": "^2.29.4",
-    "rc-slider": "^10.1.1",
-    "react": "^18.2.0",
-    "react-autosuggest": "^10.1.0",
-    "react-bootstrap-table-next": "^4.0.3",
-    "react-bootstrap-typeahead": "^6.0.2",
-    "react-datepicker": "^4.10.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
-    "react-multi-carousel": "^2.8.2",
-    "react-notification-system-redux": "^2.0.1",
-    "react-pro-sidebar": "^1.0.0",
-    "react-rating-stars-component": "^2.2.0",
-    "react-redux": "^8.0.5",
-    "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
-    "react-select": "^5.7.1",
-    "react-share": "^4.4.1",
-    "react-toastify": "^9.1.1",
-    "reactstrap": "^9.1.6",
-    "sass": "^1.59.3",
-    "simple-line-icons": "^2.5.5",
-    "socket.io-client": "^4.6.1",
-    "validatorjs": "^3.22.1",
-    "web-vitals": "^2.1.4",
-    "yup": "^1.0.2"
-  },
+  "name": "mern-ecommerce",
+  "version": "1.0.0",
+  "description": "MERN Ecommerce",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://smartupdeal@bitbucket.org/smartupdeal/smartupdeal.git"
+  },
+  "keywords": [
+    "node",
+    "express",
+    "mongoose",
+    "react",
+    "redux",
+    "redux-thunk",
+    "webpack"
+  ],
+  "author": "",
+  "license": "MIT",
+  "bugs": {
+    "url": ""
+  },
+  "homepage": "",
+  "dependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "@google-cloud/storage": "^5.19.4",
+    "autoprefixer": "^9.6.0",
+    "autosuggest-highlight": "^3.1.1",
+    "axios": "^0.21.1",
+    "babel-loader": "^8.0.6",
+    "bootstrap": "^4.3.1",
+    "chalk": "^2.4.2",
+    "connect-history-api-fallback": "^1.6.0",
+    "connected-react-router": "^6.4.0",
+    "copy-webpack-plugin": "^5.0.3",
+    "cors": "^2.8.5",
+    "cross-env": "^5.2.0",
+    "crypto": "^1.0.1",
+    "css-loader": "^2.1.1",
+    "cssnano": "^4.1.10",
+    "date-fns": "2.28.0",
+    "dotenv": "^8.0.0",
+    "dotenv-webpack": "^1.8.0",
+    "express": "^4.17.1",
+    "file-loader": "^4.0.0",
+    "font-awesome": "^4.7.0",
+    "formik": "^2.2.9",
+    "history": "^4.9.0",
+    "html-webpack-plugin": "^3.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "mailchimp-api-v3": "^1.14.0",
+    "mailgun-js": "^0.22.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "mobile-detect": "^1.4.4",
+    "moment": "^2.29.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-loader": "^3.0.0",
+    "rc-slider": "^9.7.2",
+    "react": "^16.8.6",
+    "react-autosuggest": "^10.1.0",
+    "react-bootstrap-table-next": "^3.1.5",
+    "react-bootstrap-table2-toolkit": "^2.0.1",
+    "react-bootstrap-typeahead": "^6.0.0-alpha.9",
+    "react-datepicker": "^4.7.0",
+    "react-dom": "^16.8.6",
+    "react-icons": "^4.3.1",
+    "react-modal": "^3.16.1",
+    "react-multi-carousel": "^2.8.2",
+    "react-notification-system-redux": "^2.0.0",
+    "react-pro-sidebar": "^1.0.0-alpha.9",
+    "react-rating-stars-component": "^2.2.0",
+    "react-redux": "^7.0.3",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-select": "^3.0.4",
+    "react-share": "^4.4.0",
+    "reactstrap": "^8.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "rimraf": "^2.6.3",
+    "sass": "^1.60.0",
+    "sass-loader": "^7.1.0",
+    "simple-line-icons": "^2.4.1",
+    "socket.io-client": "^4.2.0",
+    "style-loader": "^0.23.1",
+    "styled-components": "^5.3.6",
+    "terser-webpack-plugin": "^1.3.0",
+    "uuid": "^8.3.2",
+    "validatorjs": "^3.18.1",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-middleware": "^3.7.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-merge": "^4.2.1",
+    "webpack-pwa-manifest": "^4.0.0",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4"
   },
   "browserslist": {
     "production": [
